--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
       <a href="#" target="_blank"> This is a Link </a>
 
+      <button>This is a button</button>
+
             <!-- Unordered list -->
       <ul>
         <li> HTML </li>
