--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clutterize</title>
+    <link rel="stylesheet" href="clutterize.css">
     <link rel="stylesheet" href="styles.css" />
+    
   </head>
   <body>
     <main>
@@ -37,6 +39,7 @@
       
       <section title="Interactive Elements" class="container">
         <a href="#" target="_blank"> This is a Link </a>
+        <a class="external-link" href="#">This is an External Link </a>
         <button>This is a button</button>
       </section>
 
