Button styles & display:block form elements
Until I see a reason to style them otherwise, I think these form elements should be display:block by default. I can't think of a time when I have wanted to style my forms horizontally (except for maybe a navigation login which is less common).

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
       </section>
       
       <section title="Interactive Elements" class="container">
-        <a href="#" target="_blank"> This is a Link </a>
-        <a class="external-link" href="#">This is an External Link </a>
-        <button>This is a button</button>
+        <a href="#" target="_blank">Link </a>
+        <a class="external-link" href="#">External Link </a>
+        <button class="fit">Button</button>
       </section>
 
       <section title="Lists" class="container">
         <ul>
           <li> HTML </li>
           <li> CSS </li>
-          <li> JavaScrip t</li>
+          <li> JavaScript</li>
         </ul>
         <ol>
           <li> HTML </li>
