Add notice message
I'm sure nobody is looking, but just in case somebody decides to check out the page, I added a little notice to explain what this is.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   </head>
   <body>
     <main>
+      <section title="Notice" class="container">
+        <p>Note: This is a work in progress. There have been so many updates lately to CSS & I'm very excited by it all! I am currently exploring the CSS and design system world & using this project to help me create a style sheet that I can use in future projects.</p>
+        <a href="./clutterize.css">View styles</a>
+      </section>
       <section title="Text" class="container"> <!--You can change the default gap size with inline style [style="--gap: 2rem"] or by creating a new class & assign new value to custom prop -->
       <h1>Heading 1</h1>
       <h2>Heading 2</h2>
