Remove style.css
No point having a separate file for one or two rules

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clutterize</title>
-    <link rel="stylesheet" href="clutterize.css">
     <link rel="stylesheet" href="styles.css" />
     
   </head>
@@ -155,7 +154,7 @@
       <section title="Colours" class="container flex">
 
         <div>
-          <div style="background: var(--clr-primary);" class="clr-swatch">
+          <div style="background: var(--clr-primary); padding: 2rem;" class="clr-swatch">
             <span>#HEXCODE</span>
           </div>
             <p>Primary Color</p>
@@ -164,7 +163,7 @@
         </div>
 
         <div>
-          <div style="background: var(--clr-secondary);" class="clr-swatch">
+          <div style="background: var(--clr-secondary); padding: 2rem;" class="clr-swatch">
             <span>#HEXCODE</span>
           </div>
           <p>Secondary Color</p>
@@ -173,7 +172,7 @@
         </div>
 
         <div>
-          <div style="background: var(--clr-primary-dark);" class="clr-swatch">
+          <div style="background: var(--clr-primary-dark); padding: 2rem;" class="clr-swatch">
             <span>#HEXCODE</span>
           </div>
           <p>Primary Color - Dark</p>
